--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,6 +1,8 @@
 /* Опишите в этом файле все keyframes для проекта и стили анимаций иконки Like.
 
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
+✦ theme-dark — класс тёмной темы
+✦ theme-light — класс светлой темы
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
 ✦ card__icon-button — для кнопки, оборачивающей иконку
@@ -8,4 +10,93 @@
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
+Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+@keyframes slideUnderlineFromLeft {
+  0% {
+    scale: 0 1;
+  }
+
+  100% {
+    scale: 1 1;
+  }
+}
+@keyframes movementTriangleHorizon {
+  0% {
+    left: -18px;
+  }
+
+  100% {
+    left: -14px;
+  }
+}
+
+.card__icon-button:hover .core {
+  fill: var(--accent-color);
+  transition: fill 0.3s linear;
+}
+.card__icon-button .main-body {
+  fill: var(--background-color);
+  transition: fill 0.3s linear;
+}
+.card__icon-button:hover .main-body {
+  fill: var(--accent-color);
+  transition: fill 0.3s 0.05s linear;
+}
+.card__icon-button .core {
+  fill: var(--background-color);
+  transition: fill 0.3s 0.03s linear;
+}
+
+.card__icon-button:active .core {
+  fill: var(--heart-sparks);
+  transition: fill 0.3s linear;
+}
+.card__icon-button:active .main-body {
+  fill: var(--heart-sparks);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-sparks);
+  transition: fill 0.3s linear;
+}
+.like-icon.is-liked .main-body {
+  fill: var(--heart-sparks);
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon.is-liked .contour {
+  fill: var(--heart-sparks);
+  transition: fill 0.3s 0.06s linear;
+}
+@keyframes heart {
+  from {
+    scale: 1;
+  }
+
+  to {
+    scale: 1.5;
+  }
+}
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: heart 0.3s 0.1s ease-in;
+  animation-direction: alternate;
+}
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in;
+  animation-direction: alternate;
+}
+.like-icon .contour {
+  fill: var(--heart-contour);
+  transition: fill 0.1s linear;
+}
