--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 /* Здесь вы напишете основную часть стилей страницы.
 
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
+✦ theme-dark — класс тёмной темы
+✦ theme-light — класс светлой темы
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
 ✦ card__icon-button — для кнопки, оборачивающей иконку
@@ -8,9 +10,221 @@
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
-*/
+Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 
+*/
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-color: var(--background-color);
+  color: var(--accent-color);
+  font-family: var(--main-font-family), sans-serif;
+  font-variation-settings: "wght" var(--normal-font-weight);
+  background-image: var(--background-image);
+  background-attachment: fixed;
+  background-repeat: repeat;
+  background-size: 4px;
+}
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-block-start: clamp(6.25rem, 6.206rem + 0.1878vw, 6.375rem);
+  margin-block-end: clamp(6.25rem, 6.206rem + 0.1878vw, 6.375rem);
+  outline: 2px solid var(--accent-color);
+  background-color: var(--background-color);
+}
+.section-center {
+  max-inline-size: 696px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.header__logo {
+  font-family: "PressStart2P", fantasy;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-style: normal;
+  line-height: normal;
+  margin-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
+}
+.header__title {
+  margin-block-start: 20px;
+  margin-block-end: 25px;
+  font-family: var(--accent-font-family), fantasy;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  font-style: normal;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.header__theme-menu {
+  padding-left: 20px;
+}
+.theme-menu__list {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 14px;
+  margin-block-end: 25px;
+  position: relative;
+  font-family: var(--accent-font-family), fantasy;
+  font-size: 14px;
+  font-weight: 400;
+}
+.theme-menu__button {
+  text-transform: uppercase;
+  background-color: transparent;
+  position: relative;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+.theme-menu__button:disabled {
+  pointer-events: none;
+  opacity: 60%;
+}
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  left: -20px;
+  opacity: 60%;
+  animation: movementTriangleHorizon 1s ease-in-out infinite;
+}
+.theme-menu__button:hover {
+  opacity: 60%;
+}
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+  scale: 0;
+  transform-origin: 0 0;
+  transition: transform 0.3s ease;
+}
+.theme-menu__button:focus-visible::after {
+  animation: slideUnderlineFromLeft 0.3s ease forwards;
+}
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-color);
+  margin-block-end: 50px;
+  color: var(--accent-color);
+  outline: 2px solid var(--accent-color);
+}
+.card__title {
+  font-variation-settings: "wght" var(--bold-font-weight);
+  padding: 3px 10px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
+}
+.card__image {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-bottom: 2px solid var(--accent-color);
+  border-top: 2px solid var(--accent-color);
+}
+.card__text {
+  font-size: 18px;
+  font-style: normal;
+  line-height: 116.667%;
+  padding: 25px;
+  gap: 27px;
+  display: flex;
+  flex-direction: column;
+}
+.card__buttons {
+  align-self: flex-end;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+}
+.card__icon-button {
+  border: none;
+  background-color: var(--background-color);
+  height: 36px;
+  cursor: pointer;
+  transition: 0.3s ease;
+  padding: 0;
+}
+.card__icon-button:focus-visible {
+  outline: 2px solid var(--accent-color);
+}
+.sparks {
+  opacity: 0;
+}
+.button {
+  position: relative;
+  background-color: var(--background-color);
+  outline: 2px solid var(--accent-color);
+  cursor: pointer;
+  transition: color 1s ease, box-shadow 0.3s ease;
+}
+.button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transition: 0.5s ease-in-out;
+  transform-origin: left center;
+  transform: scaleX(0);
+}
+.button:hover {
+  color: var(--background-color);
+}
+.button:hover::after {
+  transform: scaleX(1);
+}
+.button:focus-visible {
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
+  border: 2px solid var(--accent-color);
+}
+.card__like-button {
+  text-align: center;
+  width: 130px;
+  height: 38px;
+  padding: 9px 17px;
+  overflow: hidden;
+}
+.button__text {
+  font-family: var(--accent-font-family), fantasy;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 90%; /* 12.6px */
+  position: relative;
+  z-index: 1;
+}
+
+.end {
+  margin-block-end: 100px;
+  display: flex;
+  justify-content: center;
+}
+.save-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 17px 20px;
+  min-width: 306px;
+  min-height: 51px;
+  max-height: 80px;
+}
+.save-icon {
+  margin-inline-end: 8px;
+  position: relative;
+  min-width: 21px;
+  min-height: 21px;
+  z-index: 1;
 }
