--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,7 +12,7 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
-@keyframes slideUnderlineFromLeft {
+/* @keyframes slideUnderlineFromLeft {
   0% {
     scale: 0 1;
   }
@@ -20,7 +20,7 @@
   100% {
     scale: 1 1;
   }
-}
+} */
 @keyframes movementTriangleHorizon {
   0% {
     left: -18px;
@@ -30,7 +30,6 @@
     left: -14px;
   }
 }
-
 .card__icon-button:hover .core {
   fill: var(--accent-color);
   transition: fill 0.3s linear;
@@ -99,4 +98,5 @@
 .like-icon .contour {
   fill: var(--heart-contour);
   transition: fill 0.1s linear;
+  animation-direction: alternate;
 }
